# devr

./: .gitignore  CHANGELOG.md  README.md  REVIEW.md  SUMMARY.md  pyproject.toml
.github/workflows/: ci.yml
docs/: Makefile  conf.py  index.rst  modules.rst  usage.rst
src/devr/: __init__.py  __main__.py  cli.py  config.py  release_preflight.py  templates.py  venv.py
tests/: conftest.py  test_cli.py  test_cli_integration.py  test_config.py  test_release_preflight.py  test_venv.py
